--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "@tanstack/react-router": "^1.51.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
